--- a/index.html
+++ b/index.html
@@ -1,12 +1,139 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <nav class="navbar">
+        <div class="nav-image">
+          <img src="/images/mintlify.svg" class="nav-logo" alt="nav-logo" />
+        </div>
+        <div class="nav-links">
+          <a>Resources</a>
+          <a>Documentation</a>
+          <a>Customers</a>
+          <a>Blog</a>
+          <a>Pricing</a>
+        </div>
+        <div>
+          <button class="contact-sales-btn">Contact sales</button>
+          <button class="start-free-btn">Start for free</button>
+        </div>
+      </nav>
+      <div class="hero-section">
+        <div class="link-part">
+          <p class="hero-section-link">
+            <span>NEW</span>
+            Self-updating docs with agents suggesstions
+            <i id="right-head-arrow-icon" class="fa-solid fa-chevron-right"></i>
+          </p>
+        </div>
+
+        <div class="hero-section-text">
+          <p>
+            The Intelligent <br />
+            Knowledge Platform
+          </p>
+        </div>
+
+        <div class="hero-section-paragraph">
+          <p>
+            Helping teams create and maintain world-class <br />documentation
+            built for both humans and AI
+          </p>
+        </div>
+
+        <form class="hero-section-form">
+          <input type="text" placeholder="Email address" />
+          <button class="hero-section-form-button">Start now</button>
+        </form>
+
+        <div class="interface-img-container">
+          <img src="images/hero-image-dark.svg" alt="" />
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="trusted-by-logos">
+        <img src="/images/anthropic1.svg" alt="" />
+        <img src="/images/coinbase.svg" alt="" />
+        <img src="/images/microsoft.svg" alt="" />
+        <img src="/images/perplexity.svg" alt="" />
+        <img src="/images/hubspot.svg" alt="" />
+        <img src="/images/x.svg" alt="" />
+        <img src="/images/paypal.svg" alt="" />
+        <img src="/images/lovable.svg" alt="" />
+      </section>
+    </main>
+
+    <!-- Feature Highlights Section -->
+    <section class="feature-section">
+      <h3 class="feature-section-heading">Built for the intelligence age</h3>
+      <p class="feature-heading-paragraph">
+        Integrate AI into every part of your docs lifecycle. Woven into how your
+        <br />knowledge is written, maintained, and understood by both users and
+        LLMs.
+      </p>
+      <div class="feature-section-cards">
+        <div class="feature-section-card">
+          <p class="feature-section-card-cta">LLMs.TXT & MCP</p>
+          <p class="feature-section-card-heading">
+            Built for both people and AI
+          </p>
+          <p class="feature-section-card-paragraph">
+            Ensure your product shows up in the AI <br />
+            workflows users already rely on. We support <br />
+            llms.txt, MCP, and whatever comes next.
+          </p>
+          <img src="/images/feature-section-card-image-1.png" alt="" />
+        </div>
+
+        <div class="feature-section-card">
+          <p class="feature-section-card-cta">AGENT</p>
+          <p class="feature-section-card-heading">
+            Self-updating knowledge management
+          </p>
+          <p class="feature-section-card-paragraph">
+            Draft, edit, and maintain content with a <br />
+            context-aware agent. Move faster and more <br />consistently without
+            the documentation debt.
+          </p>
+          <img
+            class="feature-section-card-img"
+            src="/images/feature-section-card-image-2.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- Intelligent Assistant Section -->
+    <section class="intelligent-assistant-section">
+      <p class="intelligent-assistant-section-text">ASSISTANT</p>
+      <p class="intelligent-assistant-section-heading">
+        Intelligent assistance for your users
+      </p>
+      <p class="intelligent-assistant-section-paragraph">
+        Turn every documentation visit into a guided conversation Your <br />
+        AI assistant understands context and delivers what users need.
+      </p>
+      <img src="images/assistant.svg" alt="assistant-svg" />
+    </section>
+
+    <!-- Enterprise Features Section -->
+    <section class="enterprise-section">
+      <div class="enterprise-section-container">
+        <p class="enterprise-section-text">ENTERPRISE-REINVENTION</p>
+      </div>
+    </section>
+  </body>
 </html>
