--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </form>
 
         <div class="interface-img-container">
-          <img src="images/hero-image-dark.svg" alt="" />
+          <img src="images/hero-image-dark.svg" class="img" alt="" />
         </div>
       </div>
     </header>
@@ -133,6 +133,93 @@
     <section class="enterprise-section">
       <div class="enterprise-section-container">
         <p class="enterprise-section-text">ENTERPRISE-REINVENTION</p>
+        <p class="enterprise-section-heading">
+          Bring intelligence to <br />enterprise knowledge
+        </p>
+        <div class="enterprise-section-paragraph-button">
+          <p class="enterprise-section-paragraph">
+            Modernize without the rebuild with enterprise-grade professional
+            service & security.
+          </p>
+          <button>Explore for enterprise</button>
+        </div>
+
+        <div class="enterprise-section-cards">
+          <div class="enterprise-section-card">
+            <img
+              class="enterprise-section-card-img"
+              src="/images/enterprise-section-card-1.svg"
+              alt="enterprise-section-card-img-1"
+            />
+            <h3 class="enterprise-section-card-heading">
+              Build with partnership
+            </h3>
+            <p class="enterprise-section-card-paragraph">
+              Direct, white-glove access to our documentation experts. <br />
+              Dedicated migration support and guidance tailored to <br />
+              your setup, and elevated support SLAs.
+            </p>
+          </div>
+
+          <div class="enterprise-section-card">
+            <img
+              class="enterprise-section-card-img"
+              src="/images/enterprise-section-card-2.svg"
+              alt="enterprise-section-card-img-2"
+            />
+            <h3 class="enterprise-section-card-heading">
+              Compliance and access control
+            </h3>
+            <p class="enterprise-section-card-paragraph">
+              Compliant with SOC 2, and in the process for ISO/27001 and GDPR
+              <br />
+              compliance to meet your internal and external data requirements.
+              <br />
+              Secure access and provisioning with SAML-based SSO.
+            </p>
+          </div>
+        </div>
+
+        <div class="enterprise-section-paragraph-image">
+          <img
+            src="images/anthropic.svg"
+            class="enterprise-section-image"
+            alt="section-img"
+          />
+          <div class="enterprise-section-image-text">
+            <p class="enterprise-section-image-text-text">CUSTOMER STORY</p>
+            <p class="enterprise-section-image-text-heading">
+              See how Anthropic accelerates <br />
+              AI development with Mintlify
+            </p>
+            <p class="enterprise-section-image-text-cta">
+              Read Story <i id="icon" class="fa-solid fa-chevron-right"></i>
+            </p>
+            <div class="image-paragraph-container">
+              <div>
+                <h4 class="image-paragraph-container-heading">2M+</h4>
+                <p class="image-paragraph-container-info">
+                  Monthly active developers
+                </p>
+              </div>
+              <div>
+                <h4 class="image-paragraph-container-heading">3+</h4>
+                <p class="image-paragraph-container-info">
+                  Products serviced: Claude <br />
+                  API, MCP and Claude Code
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="trusted-by-logs">
+          <img src="enterprise-section-svgs/anthropic.svg" alt="" />
+          <img src="enterprise-section-svgs/coinbase.svg" alt="" />
+          <img src="enterprise-section-svgs/hubspot.svg" alt="" />
+          <img src="enterprise-section-svgs/zaiper.svg" alt="" />
+          <img src="enterprise-section-svgs/at&t.svg" alt="" />
+        </div>
       </div>
     </section>
   </body>
